--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
-    <string name="app_name">FinalProject</string>
+    <string name="app_name" translatable="false">FinalProject</string>
+    <string name="searchActivityButtonString">Search</string>
+    <string name="MainActivityTitle">NASA Earth Imagery Database</string>
+    <string name="favouritesActivityButtonString">Favourites</string>
 </resources>
