--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
     <string name="searchActivityButtonString">Search</string>
     <string name="MainActivityTitle">NASA Earth Imagery Database</string>
     <string name="favouritesActivityButtonString">Favourites</string>
+    <string name="help">Help</string>
+    <string name="open">open</string>
+    <string name="close">close</string>
 </resources>
